Fix buttons being squished on small screens

--- a/src/assets/css/media-queries.css
+++ b/src/assets/css/media-queries.css
@@ -13,6 +13,15 @@
   th {
     padding: .5rem .7rem;
   }
+
+  .blog-post__footer {
+    flex-direction: column;
+  }
+
+  .blog-post__navigation--next {
+    margin-left: 0;
+    margin-top: 1rem;
+  }
 }
 
 @media (max-width: 20rem) {
